# krunner-skypeforlinux

./: .dockerignore  Dockerfile
src/: CMakeLists.txt  plasma-runner-skype.desktop  skype.cpp  skype.h
